Fix for Left Menu isn't visible

--- a/frontend/src/components/LeftMenu/LeftMenu.css
+++ b/frontend/src/components/LeftMenu/LeftMenu.css
@@ -7,7 +7,6 @@
   box-shadow: 0px 4px 6px rgba(81, 81, 81, 0.1);
   border-right: 1px solid #EBEBEB;
   min-width: max-content;
-  height: 100vh;
 }
 
 .left-menu .MuiSvgIcon-root {
